# DVC-Brevis

./: Cargo.toml  README.md  build.sh  start_server.sh
server/: cert.pem  https_server.py  key.pem  template.json
zktls/app/: Cargo.toml
zktls/app/elf/: riscv32im-pico-zkvm-elf
zktls/app/src/: main.rs
zktls/prover/: Cargo.toml
zktls/prover/data/: attestation_config.json  attestation_config_prod.json  attestation_data.json  attestation_data_binance.json  attestation_data_binance10.json
zktls/prover/src/: main.rs
